src/objects/ContractLineItem.object
<CustomObject>
    <fields>
        <fullName>CS_Asset_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Asset_Service_Level__c</fullName>
        <formula>Text(Asset.CS_Service_Level__c)</formula>
        <label>Asset Service Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Business_Hours__c</fullName>
        <label>Business Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Entitlement_Process_Name__c</fullName>
        <label>Entitlement Process Name</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Product_Code__c</fullName>
        <description>*** Service Cloud Product Code*****</description>
        <formula>PricebookEntry.Product2.Product__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product_Name__c</fullName>
        <description>Product Name</description>
        <formula>PricebookEntry.Product2.Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product_Serial_Number__c</fullName>
        <formula>/*
CASE( PricebookEntry.Product2.Product__r.Name  ,
       &apos;Rating Management&apos;,&apos;2810&apos;, 
       &apos;Reinsurance Management&apos;,&apos;2211&apos;,
       &apos;SAP-Data Integrator 30&apos;,&apos;CR217-AT2SBYB-0MUCR5Y-WJDS&apos;,
       &apos;SAP-Data Integrator 60&apos;,&apos;CT21C-N27RBYB-0MM0VRB-61Z6&apos;,
       &apos;BFO&apos;,&apos;BEFHA0AF63H79A96&apos;,
       &apos;NA&apos;)

*/
PricebookEntry.Product2.Product__r.CS_Serial_Number__c</formula>
        <label>Product Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_SKU_Id__c</fullName>
        <description>*** Service Cloud SKU ID of the Product *****</description>
        <formula>PricebookEntry.Product2.SKU_ID__c</formula>
        <label>SKU Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Serial_Number__c</fullName>
        <defaultValue>&apos;NA&apos;</defaultValue>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Solution_Owners_Allowed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Solution Owners Allowed on  a Asset</description>
        <inlineHelpText>Number of Solution Owners Allowed on a Asset</inlineHelpText>
        <label># SO by Contract</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Support_Type__c</fullName>
        <formula>Text(PricebookEntry.Product2.CS_Support_Type__c)</formula>
        <label>Support Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <description>created as part of Track 2 - CPQ</description>
        <label>Competition</label>
        <picklist>
            <picklistValues>
                <fullName>3i Infotech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accenture-Duck Creek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acturis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adacta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agencyport Software (fka: Sword Ins.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aon eSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueWave Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camilion Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCS (Combined Computer Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comarch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comtec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover-All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delphi Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBaoTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIS (Exigen)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exigen Insurance Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fadata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINEOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FirstApex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDIT Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation Group (fka: TIG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Systems Inc. (ISI)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Product_Version__c</fullName>
        <description>Created as part of Track 2 - CPQ</description>
        <label>Current Product Version</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementation_Country_Reason__c</fullName>
        <label>Implementation Country Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Country__c</fullName>
        <label>Implementation Country</label>
        <picklist>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puerto Rico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <description>Created as part of Track 2 - CPQ</description>
        <label>Implementation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Implementing</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
                <color>#E27001</color>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOBs_in_Scope__c</fullName>
        <description>created as part of Track 2 - CPQ</description>
        <label>LOBs in Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Agency Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Bus. Owner’s Policy (BOP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Casualty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Crime/public liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Dir. &amp; Officers Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Excess &amp; Surplus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Farm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - General Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Inland Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Medical Malpractice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Mortgage (LMI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Multi-peril</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Ocean Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Package Policy (CPP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Political risks &amp; conting.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Professional Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Surety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Umbrella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life &amp; Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal - Accident &amp; Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal - Auto</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>License_Count_Reason__c</fullName>
        <label>License Count Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Count__c</fullName>
        <label>License Count</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Major_Upgrades__c</fullName>
        <description>Created as part of Track 2 - CPQ</description>
        <label># of Major Upgrades</label>
        <summaryFilterItems>
            <field>Upgrades__c.Upgrade_Type__c</field>
            <operation>equals</operation>
            <value>Major Upgrade</value>
        </summaryFilterItems>
        <summaryForeignKey>Upgrades__c.Contract_Line_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Out_Clause_End_Date__c</fullName>
        <label>Out Clause End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Deal_Close_Date__c</fullName>
        <description>Created as part of Track 2 - CPQ</description>
        <label>Product Deal Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_First_Go_Live_Date__c</fullName>
        <description>Created as part of Track 2 - CPQ</description>
        <label>Product First Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_First_Implementation_Start_Date__c</fullName>
        <description>Created as part of Track 2 - CPQ</description>
        <label>Product First Implementation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>IF( 
AND(UPPER(PricebookEntry.Product2.RecordType.DeveloperName)=&apos;SKU&apos;, ISBLANK(TEXT(PricebookEntry.Product2.CS_Support_Type__c))), 
&apos;Product SKU&apos;, 
&apos;Maintenance SKU&apos;)</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Version</label>
        <referenceTo>CS_Release__c</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upgraded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of Track 2 - CPQ</description>
        <label>Upgraded?</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>